--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "contentful": "^9.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.0.5",
